...
        }
        .navigationTitle(account.name)
        .navigationBarTitleDisplayMode(.large)
        .toolbar {
            ToolbarItem(placement: .navigationBarTrailing) {
                NavigationLink(destination: EditAccountView(account: account)) {
                    Text("Edit")
                }
            }
        }
    }
    
    // MARK: - Subviews
...
